--- a/ConnectorService/ConnectorService/appsettings.json
+++ b/ConnectorService/ConnectorService/appsettings.json
@@ -5,5 +5,6 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "SqlFormatURL": "https://sqlformat.org/api/v1/format"
 }
