--- a/ConnectorService/ConnectorService/ConnectorService.csproj
+++ b/ConnectorService/ConnectorService/ConnectorService.csproj
@@ -14,6 +14,7 @@
     <PackageReference Include="MediatR" Version="11.0.0" />
     <PackageReference Include="MediatR.Extensions.Microsoft.DependencyInjection" Version="11.0.0" />
     <PackageReference Include="Microsoft.AspNetCore.Authentication.JwtBearer" Version="6.0.9" />
+    <PackageReference Include="Microsoft.Data.Sqlite" Version="7.0.0" />
     <PackageReference Include="Newtonsoft.Json" Version="13.0.1" />
     <PackageReference Include="Npgsql" Version="7.0.0" />
     <PackageReference Include="Polly" Version="7.2.3" />
