--- a/ConnectorService/ConnectorService/ConnectorService.csproj
+++ b/ConnectorService/ConnectorService/ConnectorService.csproj
@@ -20,6 +20,7 @@
     <PackageReference Include="Polly" Version="7.2.3" />
     <PackageReference Include="Polly.Extensions.Http" Version="3.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.2.3" />
+    <PackageReference Include="System.Data.OracleClient" Version="1.0.8" />
     <PackageReference Include="System.Data.SqlClient" Version="4.8.4" />
   </ItemGroup>
 
